--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev&& node app.js",
+    "start": "node app.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
@@ -65,6 +65,7 @@
     "koa-logger": "^3.2.0",
     "koa-router": "^7.4.0",
     "mocha": "^3.2.0",
+    "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
@@ -80,7 +81,8 @@
     "sass-loader": "^7.1.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "sequelize": "^5.1.0",
+    "sequelize": "^5.8.0",
+    "sequelize-auto": "^0.4.29",
     "shelljs": "^0.7.6",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.8.0",
