--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "server": "node app.js"
   },
   "dependencies": {
+    "@types/koa-router": "^7.0.40",
     "mysql": "^2.16.0",
     "sequelize-auto": "^0.4.29",
     "vue": "^2.5.2",
@@ -63,7 +64,7 @@
     "koa-json": "^2.0.2",
     "koa-jwt": "^3.5.1",
     "koa-logger": "^3.2.0",
-    "koa-router": "^7.4.0",
+    "koa-router": "^7.1.1",
     "mocha": "^3.2.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
