--- a/package.json
+++ b/package.json
@@ -93,8 +93,10 @@
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-baidu-map": "^0.21.20",
     "vue-chartjs": "^3.4.2",
     "vue-loader": "^13.3.0",
+    "vue-particles": "^1.0.9",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
     "vuex": "^3.1.0",
