--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "koa-jwt": "^3.5.1",
     "koa-logger": "^3.2.0",
     "koa-router": "^7.1.1",
+    "material-design-icons": "^3.0.1",
     "mocha": "^3.2.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
