--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "koa-router": "^7.1.1",
     "material-design-icons": "^3.0.1",
     "mocha": "^3.2.0",
+    "moment": "^2.24.0",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
     "nightwatch": "^0.9.12",
